--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/forms": "^18.1.0",
     "@angular/platform-browser": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.5.0",
     "zone.js": "~0.14.0"
